# json-schema-catalog-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pkgs-lib-tests.nix  pkgs-lib.nix
json-schema-catalog-rs/: Cargo.toml  build.rs  example.json
json-schema-catalog-rs/src/: lib.rs  main.rs
json-schema-catalog-rs/test/: example-with-schema.json  example.json
