[package]
name = "json-schema-catalog-rs"
version = "0.1.0"
edition = "2021"
description = "A tool for managing JSON Schema catalogs as defined by https://github.com/hmcts/cp-framework-libraries/blob/main/json-schema-catalog/catalog-core/src/main/resources/schema_catalog_schema.json"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/roberth/json-schema-catalog-rs"
keywords = ["json", "schema", "catalog", "json-schema", "catalog"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
json_schema = "1.7.5"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
xdg = "3.0.0"


[dev-dependencies]

[lib]

[build-dependencies]
prettyplease = "0.2.32"
schemars = "0.8.22"
serde_json = "1.0.140"
syn = "2.0.101"
typify = "0.4.1"

[[bin]]
name = "json-schema-catalog"
path = "src/main.rs"
