[package]
name = "json-schema-catalog-rs"
version = "0.2.0"
edition = "2021"
description = "A tool for managing JSON Schema catalogs as defined by https://github.com/hmcts/cp-framework-libraries/blob/main/json-schema-catalog/catalog-core/src/main/resources/schema_catalog_schema.json"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/roberth/json-schema-catalog-rs"
keywords = ["json", "schema", "catalog", "json-schema", "catalog"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
json_schema = "1.7"
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
url = "2.5"
xdg = "3.0"


[dev-dependencies]

[lib]

[build-dependencies]
prettyplease = "0.2"
schemars = "0.8"
serde_json = "1.0"
syn = "2.0"
typify = "0.4"

[[bin]]
name = "json-schema-catalog"
path = "src/main.rs"
